--- a/31/source/scss/_main.scss
+++ b/31/source/scss/_main.scss
@@ -1,366 +1,277 @@
-.main-content {
-  padding: 100px 0 85px;
-  color: white;
-  background-color: #f2f2f2;
+#layout-container {
+  min-height: 100%;
+  display: flex;
+  position: relative;
+  flex-grow: 1;
+  flex-direction: row;
 
-  @media (max-width: 991px) {
-    padding: 51px 0;
-  }
+  .sidebar {
+    width: 80px;
+    writing-mode: tb-rl;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    background: #FAF8F6;
+    box-shadow: -1px 0px 14px rgba(0, 0, 0, 0.150131);
 
-  p {
-    font-size: 18px;
-    line-height: 1.67;
-    opacity: 0.9;
-
-    strong {
+    span.cta {
       font-weight: 600;
+      font-size: 16px;
+      line-height: 20px;
+      color: #0B0B0B;
+      transform: rotate(180deg);
+      transition: transform 1s ease-in-out;
+      padding-bottom: 32px;
+      cursor: pointer;
+      position: relative;
+
+      &::before {
+        content: '';
+        position: absolute;
+        right: 4px;
+        background-image: url("../img/icon.svg");
+        width: 16px;
+        height: 16px;
+        transform: rotate(90deg);
+        top: 90px;
+      }
     }
   }
 
-  .intro {
-    margin-bottom: 30px;
+  .main-content {
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    flex-grow: 1;
   }
+}
 
-  .title {
-    margin-bottom: 40px;
-    font-size: 30px;
-    font-weight: 600;
-    line-height: 1.5;
-    text-transform: uppercase;
+.home-banner {
+  background-image: url("../img/home-banner.jpg");
+  padding: 199px 0;
+  background-size: contain;
+  background-position: 100% 50%;
+  background-repeat: no-repeat;
 
-    @media (max-width: 991px) {
-      margin-bottom: 19px;
+  &__cta {
+    background: #48DAA2;
+    box-shadow: 0px 0px 30px rgba(72, 218, 162, 0.499208);
+    border-radius: 2px;
+    padding: 73px 40px 83px;
+
+    &--title {
+      font-weight: bold;
+      font-size: 38px;
+      line-height: 48px;
+      color: #FFFFFF;
+      margin-bottom: 50px;
     }
   }
+}
 
-  .second-title {
-    margin-top: 160px;
+.about {
+  padding: 103px 0 42px;
+  position: relative;
+  overflow-x: hidden;
 
-    @media (max-width: 991px) {
-      margin-top: 60px;
-    }
-  }
-
-  .main-list-block {
+  &__stats {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: flex-start;
-    align-items: flex-start;
+    justify-content: center;
+    align-items: center;
     align-content: stretch;
-  }
+    height: 100%;
+    padding: 30px 0;
 
-  .main-list {
-    max-width: 100%;
-    margin-bottom: 160px;
-    margin-left: 0;
-    flex: 0 0 50%;
-    padding-right: 20px;
-
-    @media (max-width: 767px) {
-      flex: 0 0 100%;
-      padding-right: 0;
-    }
-
-
-    @media (max-width: 991px) {
-      margin-bottom: 50px;
-    }
-
-    li {
-      position: relative;
-      margin-bottom: 10px;
-      font-size: 16px;
-      line-height: 30px;
-      opacity: 0.9;
-      letter-spacing: -0.01px;
-
-      strong {
-        font-weight: 600;
-      }
-
-      &:before {
-        content: '';
-        position: absolute;
-        left: -23px;
-        top: 12px;
-        display: block;
-        width: 5px;
-        height: 5px;
-        background-color: #1ADADA;
-      }
-    }
-  }
-
-  .main-list-new {
-    max-width: 100%;
-    margin-bottom: 160px;
-    margin-left: 0;
-    padding-left: 30px;
-
-    @media (max-width: 991px) {
-      margin-bottom: 50px;
-    }
-
-    li {
-      position: relative;
-      margin-bottom: 10px;
-      font-size: 16px;
-      line-height: 30px;
-      opacity: 0.9;
-      letter-spacing: -0.01px;
-
-      strong {
-        font-weight: 600;
-      }
-
-      &:before {
-        content: '';
-        position: absolute;
-        left: -25px;
-        top: 12px;
-        display: block;
-        width: 5px;
-        height: 5px;
-        background-color: #1ADADA;
-      }
-    }
-  }
-
-  .team {
-    margin-bottom: 30px;
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-
-    li {
-      margin-bottom: 30px;
-
-      @media (max-width: 991px) {
-        margin-bottom: 50px;
-        width: 100%;
-      }
-
-      figure {
-        flex-shrink: 0;
-        width: 120px;
-        height: 120px;
-        border-radius: 50%;
-        overflow: hidden;
-        margin: 0 auto 20px;
-
-        img {
-          width: 103%;
-          height: auto;
-        }
-      }
-
-      .info {
-        height: 100%;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-
-        @media (max-width: 767px) {
-          display: block;
-        }
-
-        header,
-        footer {
-          text-align: center;
-        }
-      }
-
-      .name {
-        margin-bottom: 6px;
-        font-size: 14px;
-        font-weight: 600;
-        text-transform: uppercase;
-      }
-
-      .position {
-        display: block;
-        margin-bottom: 13px;
-        font-size: 14px;
-        font-weight: 500;
-        line-height: 1.43;
-        opacity: 0.6;
-      }
-
-      .exp {
-        display: inline-block;
-        margin-bottom: 9px;
-        font-size: 14px;
-        font-weight: 500;
-        line-height: 31px;
-        border-right: 1px solid #979797;
-        padding-right: 10px;
-        margin-right: 6px;
-
-        strong {
-          font-weight: 600;
-        }
-      }
-
-      .ln {
-        cursor: pointer;
-        opacity: .87;
-
-        &:hover {
-          opacity: 1;
-        }
-      }
-    }
-  }
-
-  .duration, .benefit {
-    position: relative;
-    padding-left: 50px;
-    margin-bottom: 54px;
-
-    &:before {
-      content: '';
-      position: absolute;
-      top: 1px;
-      left: 0;
-      display: block;
-      width: 30px;
-      height: 30px;
-    }
-
-    h5 {
-      margin-bottom: 14px;
-      font-size: 18px;
-      font-weight: 600;
-      line-height: 1.78;
-      text-transform: uppercase;
-    }
-
-    .main-list {
-      margin-bottom: 0;
-    }
-  }
-
-  .duration:before {
-    background: url('../img/duration.svg') /cover no-repeat;
-  }
-
-  .benefit {
-    margin-bottom: 41px;
-    padding-left: 47px;
-
-    h5 {
-      margin-bottom: 19px;
-    }
-
-    &:before {
-      background: url('../img/benefit.svg') /cover no-repeat;
-    }
-  }
-
-  .resume {
-    &:before {
-      content: '';
-      display: block;
-      margin-bottom: 25px;
-      width: 30px;
-      height: 2px;
-      background: #1ADADA;
-    }
-
-    p {
-      font-size: 18px;
-      line-height: 1.78;
-      letter-spacing: 1.3px;
-      color: #13BEBE;
-      font-weight: 500;
-    }
-  }
-
-  @media (min-width: 768px) {
-    .team {
+    &--item {
+      flex: 0 0 50%;
+      justify-content: center;
       display: flex;
-      flex-direction: row;
+      flex-direction: column;
+
+      .stat-num {
+        display: block;
+        margin: 0 auto 15px;
+        font-weight: 900;
+        font-size: 90px;
+        line-height: 72px;
+        color: #00DCA8;
+      }
+
+      .stat-desc {
+        font-weight: 900;
+        font-size: 20px;
+        line-height: 25px;
+        color: #0B0B0B;
+        display: block;
+        margin: 0 auto;
+      }
+    }
+  }
+}
+
+.position {
+  position: absolute;
+  right: -100px;
+  top: 0;
+  font-weight: 900;
+  font-size: 230px;
+  line-height: 289px;
+  color: #48DAA2;
+  opacity: 0.15;
+  z-index: -1;
+
+  &.left-pos {
+    right: unset;
+    left: -300px;
+    top: -40px;
+  }
+}
+
+.values {
+  position: relative;
+  padding-bottom: 150px;
+
+  &__content {
+    width: 100%;
+    position: relative;
+
+    &--center {
+      border: 3px dashed #48DAA2;
+      box-sizing: border-box;
+      margin: 0 auto;
+      max-width: 570px;
+      min-height: 570px;
+      display: flex;
+      flex-direction: column;
       flex-wrap: nowrap;
-      justify-content: flex-start;
+      justify-content: center;
       align-items: center;
       align-content: stretch;
-      margin-top: 48px;
-      max-width: 698px;
+      border-radius: 50%;
 
-      li {
-        &:nth-child(1) {
-          margin-right: 83px;
-        }
+      h3 {
+        display: none;
+      }
+
+      p {
+        font-size: 18px;
+        line-height: 26px;
+        color: #0B0B0B;
+        max-width: 360px;
+        margin: 0 auto;
+      }
+
+      img {
+        margin-bottom: 28px;
       }
     }
-  }
-}
 
-@media (min-width: 1200px) {
-  .container {
-    max-width: 1200px;
-  }
-}
+    &--item {
+      position: absolute;
 
-@media (max-width: 767px) {
-  .col-12 {
-    padding-left: 20px;
-    padding-right: 20px;
-  }
+      &:nth-child(2) {
+        right: 35px;
+        top: 160px;
 
-  .footer {
-    .container {
-      padding-left: 20px;
-      padding-right: 20px;
-    }
-  }
-}
+        h3 {
+          &::before {
+            left: -50px;
+          }
+        }
+      }
 
-@media (min-width: 576px) {
-  .main-content {
-    .about-title {
-      br {
+      &:nth-child(3) {
+        right: 395px;
+        bottom: -45px;
+
+        h3 {
+          &::before {
+            top: -27px;
+            left: -25px;
+          }
+        }
+      }
+
+      &:nth-child(4) {
+        left: 75px;
+        top: 400px;
+
+        h3 {
+          &::before {
+            left: unset;
+            right: -36px;
+          }
+        }
+      }
+
+      h3 {
+        cursor: pointer;
+        position: relative;
+        max-width: 270px;
+
+        &::before {
+          content: '';
+          position: absolute;
+          background: #48DAA2;
+          width: 20px;
+          height: 20px;
+          border-radius: 50%;
+          left: 0;
+          top: 0;
+        }
+
+        &:hover {
+          color: #48DAA2;
+        }
+      }
+
+      img,
+      p {
         display: none;
       }
     }
   }
 }
 
-.modal-video {
-  display: flex;
-  position: fixed;
-  z-index: 100;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  margin: auto;
-  width: 100%;
-  height: 100%;
-  align-items: center;
-  justify-content: center;
-  background: rgba(0,0,0,0.4);
-}
-.modal-video .container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-}
-.modal-video__iframe-container {
-  width: 100%;
-  height: 0;
-  padding-bottom: 56.25%;
+.services {
   position: relative;
-}
-.modal-video__iframe {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 1;
+  padding: 40px 0 137px;
+  overflow-x: hidden;
+
+  .box {
+    position: relative;
+    height: 100%;
+
+    &::after {
+      counter-increment: my-sec-counter;
+      content: "0" counter(my-sec-counter);
+      font-weight: 900;
+      font-size: 26px;
+      line-height: 33px;
+      color: #0B0B0B;
+      position: absolute;
+      right: 0;
+      bottom: 0;
+    }
+  }
+
+  &__item {
+    background: #48DAA2;
+    padding: 40px 30px;
+    height: 100%;
+    clip-path: url(#myPath);
+
+    h3 {
+      margin-bottom: 20px;
+    }
+
+    p {
+      font-size: 18px;
+      line-height: 26px;
+      color: #0B0B0B;
+    }
+  }
 }
