--- a/31/source/scss/app.scss
+++ b/31/source/scss/app.scss
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700');
-@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700');
 @import "reset";
 @import "common";
 @import "buttons";
@@ -7,3 +5,4 @@
 @import "header";
 @import "main";
 @import "footer";
+@import "media";
